crates/au-cli/tests/it/snapshots/it__scenarios__block-id-duplicate.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "block-id-duplicate",
      "message": "block-id `^obs-1` appears 2 times in this file; references resolve to the first only — disambiguate",
      "related": [
        {
          "file": "<root>/scenarios/block-id-duplicate/notes.md",
          "line_col": {
            "end": {
              "col": 1,
              "line": 15
            },
            "start": {
              "col": 1,
              "line": 14
            }
          },
          "range": {
            "end": 196,
            "start": 189
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/block-id-duplicate/notes.md",
        "line_col": {
          "end": {
            "col": 1,
            "line": 10
          },
          "start": {
            "col": 1,
            "line": 9
          }
        },
        "range": {
          "end": 106,
          "start": 99
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 24,
                        "line_col": {
                          "end": {
                            "col": 25,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/block-id-duplicate/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "block-id-duplicate"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "block-id-duplicate"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/block-id-duplicate/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 79,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 68
            },
            "text": "Findings"
          },
          {
            "id": "obs-1",
            "kind": "block_id_marker",
            "span": {
              "end": 106,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 10
                },
                "start": {
                  "col": 1,
                  "line": 9
                }
              },
              "start": 99
            }
          },
          {
            "id": "obs-1",
            "kind": "block_id_marker",
            "span": {
              "end": 196,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 15
                },
                "start": {
                  "col": 1,
                  "line": 14
                }
              },
              "start": 189
            }
          }
        ],
        "claim": [
          "note"
        ],
        "closure": [
          "note"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "note",
                "origin_path": "<root>/scenarios/block-id-duplicate/type/note.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 62,
                        "line_col": {
                          "end": {
                            "col": 48,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 28
                      },
                      "file": "<root>/scenarios/block-id-duplicate/notes.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Notes with a duplicated block-id"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Notes with a duplicated block-id"
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/block-id-duplicate/notes.md",
        "section_presence": null
      }
    ]
  }
}
